<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_white"
        android:padding="24dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_layout_direccion"
                    android:textColor="@color/colorDark"
                    android:textSize="36sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp"
                    android:text="@string/region"
                    android:textColor="@color/colorGray" />

                <Spinner
                    android:id="@+id/regionSp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/spinner"
                    android:elevation="5dp"
                    android:entries="@array/region_array" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp"
                    android:text="@string/comuna"
                    android:textColor="@color/colorGray" />

                <Spinner
                    android:id="@+id/comunaSp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/spinner"
                    android:elevation="5dp"
                    android:entries="@array/comuna_array" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp"
                    android:text="@string/calle"
                    android:textColor="@color/colorGray" />

                <EditText
                    android:id="@+id/calleEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@drawable/fieldtext_white"
                    android:elevation="5dp"
                    android:hint="Av. Marina"
                    android:inputType="text"
                    android:paddingHorizontal="24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp"
                    android:text="@string/numero"
                    android:textColor="@color/colorGray" />

                <EditText
                    android:id="@+id/numeroEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/fieldtext_white"
                    android:elevation="5dp"
                    android:hint="1024"
                    android:paddingHorizontal="24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp"
                    android:text="@string/depto_piso"
                    android:textColor="@color/colorGray" />

                <EditText
                    android:id="@+id/pisoEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/fieldtext_white"
                    android:elevation="5dp"
                    android:paddingHorizontal="24dp" />

                <Button
                    android:id="@+id/aceptarDireccionBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/gradient_primary"
                    android:text="@string/aceptar"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/closeDireccionBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/gradient_dark"
                    android:text="@string/cancelar"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp" />

            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>
</RelativeLayout>